output/cpp/css/grammars/CSSParser.cpp

// Generated from grammars/CSS.g4 by ANTLR 4.13.1


#include "CSSListener.h"
#include "CSSVisitor.h"

#include "CSSParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CSSParserStaticData final {
  CSSParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CSSParserStaticData(const CSSParserStaticData&) = delete;
  CSSParserStaticData(CSSParserStaticData&&) = delete;
  CSSParserStaticData& operator=(const CSSParserStaticData&) = delete;
  CSSParserStaticData& operator=(CSSParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cssParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CSSParserStaticData *cssParserStaticData = nullptr;

void cssParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cssParserStaticData != nullptr) {
    return;
  }
#else
  assert(cssParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CSSParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "statement", "ruleset", "selectorList", "selector", 
      "combinator", "simpleSelector", "typeSelector", "universalSelector", 
      "idSelector", "classSelector", "attributeSelector", "attributeOperator", 
      "pseudoSelector", "pseudoClass", "pseudoClassArgument", "pseudoElement", 
      "declaration", "property", "value", "operator", "term", "unaryOperator", 
      "numeric", "percentage", "length", "angle", "time", "frequency", "resolution", 
      "hexcolor", "function", "functionArguments", "functionArgument", "calc", 
      "calcExpression", "calcTerm", "calcFactor", "atRule", "atImport", 
      "atMedia", "mediaQueryList", "mediaQuery", "mediaType", "mediaFeature", 
      "atKeyframes", "keyframeBlock", "keyframeSelector", "atFontFace", 
      "atSupports", "supportsCondition", "supportsNegation", "supportsConjunction", 
      "supportsDisjunction", "supportsInParens", "supportsFeature", "atPage", 
      "pseudoPage", "atNamespace", "atCharset", "atViewport", "atCounterStyle", 
      "atFontFeatureValues", "fontFamilyName", "fontFeatureValueBlock", 
      "atProperty", "expression", "comment"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "','", "'>'", "'+'", "'~'", "'*'", "'#'", "'.'", 
      "'['", "']'", "'='", "'~='", "'|='", "'^='", "'$='", "'*='", "':'", 
      "'('", "')'", "'is'", "'where'", "'has'", "'::'", "';'", "'-'", "'/'", 
      "'%'", "'calc'", "'@'", "", "'@import'", "'@media'", "'@keyframes'", 
      "'@font-face'", "'@supports'", "'@page'", "'@namespace'", "'@charset'", 
      "'@viewport'", "'@counter-style'", "'@font-feature-values'", "'@property'", 
      "'only'", "'not'", "'and'", "'or'", "'from'", "'to'", "'!important'", 
      "'px'", "'em'", "'rem'", "'vh'", "'vw'", "'vmin'", "'vmax'", "'ch'", 
      "'ex'", "'cm'", "'mm'", "'in'", "'pt'", "'pc'", "'deg'", "'rad'", 
      "'grad'", "'turn'", "'s'", "'ms'", "'Hz'", "'kHz'", "'dpi'", "'dpcm'", 
      "'dppx'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "COMMENT", 
      "IMPORT", "MEDIA", "KEYFRAMES", "FONT_FACE", "SUPPORTS", "PAGE", "NAMESPACE", 
      "CHARSET", "VIEWPORT", "COUNTER_STYLE", "FONT_FEATURE_VALUES", "PROPERTY", 
      "ONLY", "NOT", "AND", "OR", "FROM", "TO", "IMPORTANT", "PX", "EM", 
      "REM", "VH", "VW", "VMIN", "VMAX", "CH", "EX", "CM", "MM", "IN", "PT", 
      "PC", "DEG", "RAD", "GRAD", "TURN", "S", "MS", "HZ", "KHZ", "DPI", 
      "DPCM", "DPPX", "VARIABLE", "NUMBER", "STRING_LITERAL", "URI", "IDENTIFIER", 
      "HEX_DIGIT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cssParserStaticData = staticData.release();
}

}

CSSParser::CSSParser(TokenStream *input) : CSSParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CSSParser::CSSParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CSSParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cssParserStaticData->atn, cssParserStaticData->decisionToDFA, cssParserStaticData->sharedContextCache, options);
}

CSSParser::~CSSParser() {
  delete _interpreter;
}

const atn::ATN& CSSParser::getATN() const {
  return *cssParserStaticData->atn;
}

std::string CSSParser::getGrammarFileName() const {
  return "CSS.g4";
}

const std::vector<std::string>& CSSParser::getRuleNames() const {
  return cssParserStaticData->ruleNames;
}

const dfa::Vocabulary& CSSParser::getVocabulary() const {
  return cssParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CSSParser::getSerializedATN() const {
  return cssParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

CSSParser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::StylesheetContext::EOF() {
  return getToken(CSSParser::EOF, 0);
}

std::vector<CSSParser::StatementContext *> CSSParser::StylesheetContext::statement() {
  return getRuleContexts<CSSParser::StatementContext>();
}

CSSParser::StatementContext* CSSParser::StylesheetContext::statement(size_t i) {
  return getRuleContext<CSSParser::StatementContext>(i);
}


size_t CSSParser::StylesheetContext::getRuleIndex() const {
  return CSSParser::RuleStylesheet;
}

void CSSParser::StylesheetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStylesheet(this);
}

void CSSParser::StylesheetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStylesheet(this);
}


std::any CSSParser::StylesheetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitStylesheet(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::StylesheetContext* CSSParser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, CSSParser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 17590055602170) != 0) || _la == CSSParser::IDENTIFIER

    || _la == CSSParser::WS) {
      setState(136);
      statement();
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(142);
    match(CSSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CSSParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSParser::RulesetContext* CSSParser::StatementContext::ruleset() {
  return getRuleContext<CSSParser::RulesetContext>(0);
}

CSSParser::AtRuleContext* CSSParser::StatementContext::atRule() {
  return getRuleContext<CSSParser::AtRuleContext>(0);
}

CSSParser::CommentContext* CSSParser::StatementContext::comment() {
  return getRuleContext<CSSParser::CommentContext>(0);
}


size_t CSSParser::StatementContext::getRuleIndex() const {
  return CSSParser::RuleStatement;
}

void CSSParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void CSSParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any CSSParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::StatementContext* CSSParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CSSParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(147);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::T__0:
      case CSSParser::T__2:
      case CSSParser::T__3:
      case CSSParser::T__4:
      case CSSParser::T__5:
      case CSSParser::T__6:
      case CSSParser::T__7:
      case CSSParser::T__8:
      case CSSParser::T__9:
      case CSSParser::T__17:
      case CSSParser::T__23:
      case CSSParser::IDENTIFIER:
      case CSSParser::WS: {
        enterOuterAlt(_localctx, 1);
        setState(144);
        ruleset();
        break;
      }

      case CSSParser::IMPORT:
      case CSSParser::MEDIA:
      case CSSParser::KEYFRAMES:
      case CSSParser::FONT_FACE:
      case CSSParser::SUPPORTS:
      case CSSParser::PAGE:
      case CSSParser::NAMESPACE:
      case CSSParser::CHARSET:
      case CSSParser::VIEWPORT:
      case CSSParser::COUNTER_STYLE:
      case CSSParser::FONT_FEATURE_VALUES:
      case CSSParser::PROPERTY: {
        enterOuterAlt(_localctx, 2);
        setState(145);
        atRule();
        break;
      }

      case CSSParser::COMMENT: {
        enterOuterAlt(_localctx, 3);
        setState(146);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RulesetContext ------------------------------------------------------------------

CSSParser::RulesetContext::RulesetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSParser::SelectorListContext* CSSParser::RulesetContext::selectorList() {
  return getRuleContext<CSSParser::SelectorListContext>(0);
}

std::vector<CSSParser::DeclarationContext *> CSSParser::RulesetContext::declaration() {
  return getRuleContexts<CSSParser::DeclarationContext>();
}

CSSParser::DeclarationContext* CSSParser::RulesetContext::declaration(size_t i) {
  return getRuleContext<CSSParser::DeclarationContext>(i);
}


size_t CSSParser::RulesetContext::getRuleIndex() const {
  return CSSParser::RuleRuleset;
}

void CSSParser::RulesetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRuleset(this);
}

void CSSParser::RulesetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRuleset(this);
}


std::any CSSParser::RulesetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitRuleset(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::RulesetContext* CSSParser::ruleset() {
  RulesetContext *_localctx = _tracker.createInstance<RulesetContext>(_ctx, getState());
  enterRule(_localctx, 4, CSSParser::RuleRuleset);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    selectorList();
    setState(150);
    match(CSSParser::T__0);
    setState(154);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSParser::VARIABLE

    || _la == CSSParser::IDENTIFIER) {
      setState(151);
      declaration();
      setState(156);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(157);
    match(CSSParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorListContext ------------------------------------------------------------------

CSSParser::SelectorListContext::SelectorListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSParser::SelectorContext *> CSSParser::SelectorListContext::selector() {
  return getRuleContexts<CSSParser::SelectorContext>();
}

CSSParser::SelectorContext* CSSParser::SelectorListContext::selector(size_t i) {
  return getRuleContext<CSSParser::SelectorContext>(i);
}


size_t CSSParser::SelectorListContext::getRuleIndex() const {
  return CSSParser::RuleSelectorList;
}

void CSSParser::SelectorListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectorList(this);
}

void CSSParser::SelectorListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectorList(this);
}


std::any CSSParser::SelectorListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitSelectorList(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::SelectorListContext* CSSParser::selectorList() {
  SelectorListContext *_localctx = _tracker.createInstance<SelectorListContext>(_ctx, getState());
  enterRule(_localctx, 6, CSSParser::RuleSelectorList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    selector();
    setState(164);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSParser::T__2) {
      setState(160);
      match(CSSParser::T__2);
      setState(161);
      selector();
      setState(166);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorContext ------------------------------------------------------------------

CSSParser::SelectorContext::SelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSParser::SimpleSelectorContext *> CSSParser::SelectorContext::simpleSelector() {
  return getRuleContexts<CSSParser::SimpleSelectorContext>();
}

CSSParser::SimpleSelectorContext* CSSParser::SelectorContext::simpleSelector(size_t i) {
  return getRuleContext<CSSParser::SimpleSelectorContext>(i);
}

std::vector<CSSParser::CombinatorContext *> CSSParser::SelectorContext::combinator() {
  return getRuleContexts<CSSParser::CombinatorContext>();
}

CSSParser::CombinatorContext* CSSParser::SelectorContext::combinator(size_t i) {
  return getRuleContext<CSSParser::CombinatorContext>(i);
}


size_t CSSParser::SelectorContext::getRuleIndex() const {
  return CSSParser::RuleSelector;
}

void CSSParser::SelectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelector(this);
}

void CSSParser::SelectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelector(this);
}


std::any CSSParser::SelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitSelector(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::SelectorContext* CSSParser::selector() {
  SelectorContext *_localctx = _tracker.createInstance<SelectorContext>(_ctx, getState());
  enterRule(_localctx, 8, CSSParser::RuleSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(167);
    simpleSelector();
    setState(173);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 112) != 0) || _la == CSSParser::WS) {
      setState(168);
      combinator();
      setState(169);
      simpleSelector();
      setState(175);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CombinatorContext ------------------------------------------------------------------

CSSParser::CombinatorContext::CombinatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::CombinatorContext::WS() {
  return getToken(CSSParser::WS, 0);
}


size_t CSSParser::CombinatorContext::getRuleIndex() const {
  return CSSParser::RuleCombinator;
}

void CSSParser::CombinatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCombinator(this);
}

void CSSParser::CombinatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCombinator(this);
}


std::any CSSParser::CombinatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitCombinator(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::CombinatorContext* CSSParser::combinator() {
  CombinatorContext *_localctx = _tracker.createInstance<CombinatorContext>(_ctx, getState());
  enterRule(_localctx, 10, CSSParser::RuleCombinator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(176);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 112) != 0) || _la == CSSParser::WS)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleSelectorContext ------------------------------------------------------------------

CSSParser::SimpleSelectorContext::SimpleSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSParser::TypeSelectorContext* CSSParser::SimpleSelectorContext::typeSelector() {
  return getRuleContext<CSSParser::TypeSelectorContext>(0);
}

CSSParser::UniversalSelectorContext* CSSParser::SimpleSelectorContext::universalSelector() {
  return getRuleContext<CSSParser::UniversalSelectorContext>(0);
}

std::vector<CSSParser::IdSelectorContext *> CSSParser::SimpleSelectorContext::idSelector() {
  return getRuleContexts<CSSParser::IdSelectorContext>();
}

CSSParser::IdSelectorContext* CSSParser::SimpleSelectorContext::idSelector(size_t i) {
  return getRuleContext<CSSParser::IdSelectorContext>(i);
}

std::vector<CSSParser::ClassSelectorContext *> CSSParser::SimpleSelectorContext::classSelector() {
  return getRuleContexts<CSSParser::ClassSelectorContext>();
}

CSSParser::ClassSelectorContext* CSSParser::SimpleSelectorContext::classSelector(size_t i) {
  return getRuleContext<CSSParser::ClassSelectorContext>(i);
}

std::vector<CSSParser::AttributeSelectorContext *> CSSParser::SimpleSelectorContext::attributeSelector() {
  return getRuleContexts<CSSParser::AttributeSelectorContext>();
}

CSSParser::AttributeSelectorContext* CSSParser::SimpleSelectorContext::attributeSelector(size_t i) {
  return getRuleContext<CSSParser::AttributeSelectorContext>(i);
}

std::vector<CSSParser::PseudoSelectorContext *> CSSParser::SimpleSelectorContext::pseudoSelector() {
  return getRuleContexts<CSSParser::PseudoSelectorContext>();
}

CSSParser::PseudoSelectorContext* CSSParser::SimpleSelectorContext::pseudoSelector(size_t i) {
  return getRuleContext<CSSParser::PseudoSelectorContext>(i);
}


size_t CSSParser::SimpleSelectorContext::getRuleIndex() const {
  return CSSParser::RuleSimpleSelector;
}

void CSSParser::SimpleSelectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleSelector(this);
}

void CSSParser::SimpleSelectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CSSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleSelector(this);
}


std::any CSSParser::SimpleSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitSimpleSelector(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::SimpleSelectorContext* CSSParser::simpleSelector() {
  SimpleSelectorContext *_localctx = _tracker.createInstance<SimpleSelectorContext>(_ctx, getState());
  enterRule(_localctx, 12, CSSParser::RuleSimpleSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(199);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(180);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CSSParser::IDENTIFIER: {
          setState(178);
          typeSelector();
          break;
        }

        case CSSParser::T__6: {
          setState(179);
          universalSelector();
          break;
        }

        case CSSParser::T__0:
        case CSSParser::T__2:
        case CSSParser::T__3:
        case CSSParser::T__4:
        case CSSParser::T__5:
        case CSSParser::T__7:
        case CSSParser::T__8:
        case CSSParser::T__9:
        case CSSParser::T__17:
        case CSSParser::T__19:
        case CSSParser::T__23:
        case CSSParser::WS: {
          break;
        }
